--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "These are the starting files for an 11ty website with the Nunjucks template engine. For styling SCSS is used. The site comprises of a couple of pages",
   "main": "index.js",
   "scripts": {
-    "dev:11ty": "cross-env NODE_ENV=dev npx @11ty/eleventy --serve",
+    "dev:11ty": "cross-env NODE_ENV=dev npx @11ty/eleventy --serve --watch",
     "build:11ty": "cross-env NODE_ENV=production npx @11ty/eleventy",
     "dev:assets": "mix watch",
     "build:assets": "mix --production",
